<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_login_gradients">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/AppTheme.LoginAppBar" />

    <ScrollView
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/require_verify_code"/>

            <EditText
                android:id="@+id/forgot_pass_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/confirm_code"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#ffffff" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db"
                />

            <Button
                android:id="@+id/forgot_pass_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_login"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textStyle="normal"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textColor="#f16f7d"
                android:padding="16dp"
                android:clickable="true"
                android:layout_marginTop="24dp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>