<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/new_login_gradients"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/AppTheme.LoginAppBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/register_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/register_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:padding="12dp"
                    android:drawablePadding="12dp"
                    android:hint="@string/user_name"
                    android:textColorHint="#fff"
                    android:drawableLeft="@drawable/ic_person_white_24dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password"
                    android:drawablePadding="12dp"
                    android:padding="12dp"
                    android:hint="@string/password"
                    android:textColorHint="#fff"
                    android:background="@android:color/transparent"
                    android:maxLines="1"
                    android:layout_marginTop="4dp"
                    android:drawableLeft="@drawable/ic_lock_white_24dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

                <EditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:padding="12dp"
                    android:drawablePadding="12dp"
                    android:hint="@string/full_name"
                    android:textColorHint="#fff"
                    android:drawableLeft="@drawable/ic_person_outline_white_24dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:padding="12dp"
                    android:drawablePadding="12dp"
                    android:hint="@string/email"
                    android:textColorHint="#fff"
                    android:drawableLeft="@drawable/ic_email_white_24dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:padding="12dp"
                    android:drawablePadding="12dp"
                    android:hint="@string/phone_number"
                    android:textColorHint="#fff"
                    android:drawableLeft="@drawable/ic_phone_white_24dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_login"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textColor="#f16f7d"
                    android:padding="16dp"
                    android:clickable="true"
                    android:layout_marginTop="24dp" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>

