<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.caocao.bestmarket.myAccount.EditInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/background_image"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/new_login_gradients" />

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:src="@android:color/darker_gray" />


            </RelativeLayout>

            <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray"
                    tools:ignore="Suspicious0dp" />

                <LinearLayout
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:background="?android:attr/selectableItemBackground"
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"
                        android:text="@string/change_password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/TitleTextStyle"
                        android:text="@string/full_name"/>
                    <TextView style="@style/DetailTextStyle"
                        android:id="@+id/full_name_text_view"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/TitleTextStyle"
                        android:text="@string/email"/>
                    <TextView style="@style/DetailTextStyle"
                        android:id="@+id/email_text_view"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/TitleTextStyle"
                        android:text="@string/phone_number"/>
                    <TextView style="@style/DetailTextStyle"
                        android:id="@+id/phone_number_text_view"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:id="@+id/calendar_button"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/TitleTextStyle"
                        android:text="@string/date_of_birth"/>
                    <TextView style="@style/DetailTextStyle"
                        android:id="@+id/calendar_text_view"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:id="@+id/sex_button"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/TitleTextStyle"
                        android:text="@string/sex"/>
                    <TextView style="@style/DetailTextStyle"
                        android:id="@+id/sex_text_view"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:background="?android:attr/selectableItemBackground"
                        android:id="@+id/logout_button"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"
                        android:text="@string/logout"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
